<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:paddingBottom="@dimen/activity_vertical_margin" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_welcomeText"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingBottom="@dimen/activity_vertical_margin" />
    <Button
        android:id="@+id/main_button_logActivity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_buttontext_logActivity"
        android:onClick="startLogActivity"
        />
    <Button
        android:id="@+id/main_button_questionActivity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_buttontext_questionActivity"
        android:onClick="startQuestionActivity"
        />
    <Button
        android:id="@+id/main_button_startBrowser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_buttontext_startBrowser"
        android:onClick="startBrowser"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        />
    <TextView
        android:id="@+id/main_textView_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:paddingTop="@dimen/activity_horizontal_margin"
        />

</LinearLayout>
